Bug 71978 - [regression] intel_get_pipe_from_connector warning during suspend
Summary: [regression] intel_get_pipe_from_connector warning during suspend
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Jesse Barnes
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-25 05:51 UTC by Tod Jackson
Modified: 2017-07-24 22:56 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
full dmesg after pm-suspend (61.22 KB, text/plain)
2013-11-25 05:51 UTC, Tod Jackson
no flags Details
dmesg after fix patch (58.59 KB, text/plain)
2013-11-26 17:41 UTC, Tod Jackson
no flags Details

Description Tod Jackson 2013-11-25 05:51:21 UTC
Created attachment 89729 [details]
full dmesg after pm-suspend

Hi there,

Everything seems to be in working order despite, but I thought I'd mention a kernel warning I just saw when testing pm-suspend on 3.13-rc1. 

[10758.966179] ------------[ cut here ]------------
[10758.966189] WARNING: CPU: 0 PID: 13698 at drivers/gpu/drm/i915/intel_display.c:9948 intel_get_pipe_from_connector+0x4c/0x50()
[10758.966219] Modules linked in: uvcvideo videobuf2_vmalloc videobuf2_memops videobuf2_core videodev brcmsmac nouveau coretemp kvm_intel cordic brcmutil kvm snd_hda_codec_hdmi ttm dell_wmi snd_hda_codec_realtek bcma mxm_wmi wmi atl1c intel_ips snd_hda_intel snd_hda_codec snd_hwdep snd_pcm snd_page_alloc snd_timer snd
[10758.966223] CPU: 0 PID: 13698 Comm: kworker/u16:13 Not tainted 3.13.0-rc1 #1
[10758.966224] Hardware name: Alienware M11x R2/M11x R2, BIOS A04 11/23/2010
[10758.966231] Workqueue: events_unbound async_run_entry_fn
[10758.966234]  0000000000000009 ffff88016e9bfaf8 ffffffff8166c685 0000000000000000
[10758.966236]  0000000000000000 ffff88016e9bfb38 ffffffff81044127 ffff88016e9bfb28
[10758.966238]  ffff8801729a1800 ffff8800770c8000 00000000000c7204 ffff8801729a1800
[10758.966239] Call Trace:
[10758.966247]  [<ffffffff8166c685>] dump_stack+0x46/0x58
[10758.966252]  [<ffffffff81044127>] warn_slowpath_common+0x87/0xb0
[10758.966255]  [<ffffffff81044165>] warn_slowpath_null+0x15/0x20
[10758.966258]  [<ffffffff8139b43c>] intel_get_pipe_from_connector+0x4c/0x50
[10758.966263]  [<ffffffff813b50bb>] intel_panel_disable_backlight+0x2b/0x190
[10758.966266]  [<ffffffff813a037a>] intel_disable_lvds+0x5a/0x160
[10758.966269]  [<ffffffff81390dbe>] ironlake_crtc_disable+0x1ae/0x920
[10758.966273]  [<ffffffff813445dd>] ? drm_irq_uninstall+0xdd/0x1c0
[10758.966278]  [<ffffffff8135b4f2>] i915_drm_freeze+0xd2/0x150
[10758.966280]  [<ffffffff8135ba71>] i915_pm_suspend+0x41/0xa0
[10758.966286]  [<ffffffff812a26c2>] pci_pm_suspend+0x72/0x140
[10758.966294]  [<ffffffff813e79d5>] ? __pm_runtime_barrier+0x15/0x130
[10758.966297]  [<ffffffff812a2650>] ? pci_pm_freeze+0xd0/0xd0
[10758.966308]  [<ffffffff813e49e1>] dpm_run_callback+0x41/0x80
[10758.966325]  [<ffffffff813e4b0b>] __device_suspend+0xeb/0x260
[10758.966333]  [<ffffffff810716a0>] ? try_to_wake_up+0x100/0x290
[10758.966342]  [<ffffffff813e552a>] async_suspend+0x1a/0xa0
[10758.966344]  [<ffffffff8106a566>] async_run_entry_fn+0x36/0x130
[10758.966353]  [<ffffffff8105dc9f>] process_one_work+0x17f/0x420
[10758.966358]  [<ffffffff8105e389>] worker_thread+0x119/0x370
[10758.966363]  [<ffffffff8105e270>] ? rescuer_thread+0x2f0/0x2f0
[10758.966368]  [<ffffffff81064bf4>] kthread+0xc4/0xe0
[10758.966373]  [<ffffffff81064b30>] ? flush_kthread_worker+0x70/0x70
[10758.966382]  [<ffffffff8167b4bc>] ret_from_fork+0x7c/0xb0
[10758.966384]  [<ffffffff81064b30>] ? flush_kthread_worker+0x70/0x70
[10758.966386] ---[ end trace 5a95337b2336b1af ]---

I attached the full dmesg.
Comment 1 Daniel Vetter 2013-11-25 09:27:26 UTC
It's a regression, and Jesse is on the hook to supply the fix.
Comment 2 Jesse Barnes 2013-11-26 17:14:12 UTC
I think this one fixes it:

http://lists.freedesktop.org/archives/intel-gfx/2013-November/036530.html
Comment 3 Tod Jackson 2013-11-26 17:41:58 UTC
Created attachment 89851 [details]
dmesg after fix patch
Comment 4 Tod Jackson 2013-11-26 17:42:23 UTC
That fixes it indeed, thanks!
Comment 5 Daniel Vetter 2013-11-26 18:05:46 UTC
Please don't close a bug until the fix has actually landed, thanks.
Comment 6 Daniel Vetter 2013-11-26 18:09:22 UTC
Ok, now merged to -fixes:

commit 7c063c725987406d743cc7de7625ff224fab75de
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Tue Nov 26 09:13:41 2013 -0800

    drm/i915: take mode config lock around crtc disable at suspend


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.