CHROMIUM: drm/i915: take mode config lock around crtc disable at suspend

This is just a theoretical issue, but we need to do this to prevent the
WARN in pipe_from_connector at suspend time.

This regression has been introduce in

commit 7bd688cd66db93f6430f6e2b3145ee5686daa315
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Fri Nov 8 16:48:56 2013 +0200

    drm/i915: handle backlight through chip specific functions

https://bugs.freedesktop.org/show_bug.cgi?id=71978
Signed-off-by: Jesse Barnes <jbarnes@virtuousgeek.org>
Signed-off-by: Daniel Vetter <daniel.vetter@ffwll.ch>
Signed-off-by: Wayne Boyer <wayne.boyer@intel.com>

BUG=chromium:577441
TEST=suspend/resume on peppy/link

Reviewed-on: https://chromium-review.googlesource.com/192471
Reviewed-by: Stphane Marchesin <marcheu@chromium.org>
Tested-by: Wayne Boyer <wayne.boyer@intel.com>
Commit-Queue: Wayne Boyer <wayne.boyer@intel.com>
(cherry picked from commit 8cfd4ba4ee8f60cf6d6af2d92becac5c7edf0576)
Signed-off-by: Derek Basehore <dbasehore@chromium.org>

Change-Id: I6e732e38244165e0eb75f55947479145173acef2
Reviewed-on: https://chromium-review.googlesource.com/322642
Commit-Ready: Derek Basehore <dbasehore@chromium.org>
Tested-by: Derek Basehore <dbasehore@chromium.org>
Reviewed-by: Stéphane Marchesin <marcheu@chromium.org>
Reviewed-by: Eric Caruso <ejcaruso@chromium.org>